--- a/About.html
+++ b/About.html
@@ -60,7 +60,7 @@
 </footer -->
 <div class="jumbotron">
     <h1>Get to know more about me</h1>
-    <p>My name is Amina Abdulkadir Kassim. I am studying Information technology in Nile universiy of Nigeria. I just finished my first year and about to enter second.</p>
+    <p>My name is Amina Abdulkadir Kassim. I am studying Information technology in Nile universiy of Nigeria. I just finished my second year and about to enter third.</p>
 </div>
 </div>
 </body>
